@@ -10,12 +10,13 @@ public class Application {
             City.builder().name("Kyoto").pollution(5000).build()
     );
     private static List<City> citiesIndia = Arrays.asList(
-            City.builder().name("Mumbai").pollution(2000).build(),
+            City.builder().name("Mumbai").pollution(5000).build(),
+            City.builder().name("Nagpur").pollution(2000).build(),
             City.builder().name("Delhi").pollution(3000).build()
     );
     private static List<Country> countries = Arrays.asList(
             Country.builder().name("Japan").cities(citiesJapan).build(),
-            Country.builder().name("Japan").cities(citiesIndia).build()
+            Country.builder().name("India").cities(citiesIndia).build()
     );
 
     public static void main(String[] args) {
@@ -25,14 +26,21 @@ public class Application {
             System.out.println(maxPollutedCity.getName());
         }
         countries.stream()
-                .map(country1 -> country1.getCities().stream().max(Comparator.comparingInt(City::getPollution)))
-                .collect(Collectors.toList()).forEach(System.out::println);
+                .map(country1 -> country1.getCities().stream()
+                        .max(Comparator.comparingInt(City::getPollution))).toList()
+                .forEach(System.out::println);
+        countries.stream()
+                .map(country1 -> (long) country1.getCities().size())
+                .sorted(Comparator.reverseOrder())
+                .toList()
+                .forEach(System.out::println);
     }
 
-    private static List<Optional<City>> getLargestCities() {
+    private static List<City> getLargestCities() {
         return countries.stream()
                 .map(country1 -> country1.getCities().stream().max(Comparator.comparingInt(City::getPollution)))
-//                .map(Optional::orElseThrow)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
                 .collect(Collectors.toList());
     }
 }
